[package]
name = "random-facts"
version = "0.1.0"
authors = ["Thomas Mauran <78204354+thomas-mauran@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version="1.28.2", features = ["full"]}
tui = { package = "ratatui", version = "0.20.1" }
